--- a/自主學習計畫/index.html
+++ b/自主學習計畫/index.html
@@ -132,7 +132,7 @@
   <h1>歡迎來到我的網站</h1>
 
   <!-- 音樂播放器 -->
-  <audio id="bg-music" src="music.mp3" loop></audio>
+  <audio id="bg-music" src="https://www.youtube.com/watch?v=tWzZhZU3sOI" loop></audio>
 
   <!-- 控制按鈕 -->
   <button id="music-control">播放音樂</button>
