--- a/自主學習計畫/index.html
+++ b/自主學習計畫/index.html
@@ -132,7 +132,7 @@
   
 
   <!-- 音樂播放器 -->
-  <audio id="bg-music" src="https://www.youtube.com/watch?v=tWzZhZU3sOI" loop></audio>
+ <audio id="bg-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
 
   <!-- 控制按鈕 -->
   <button id="music-control">播放音樂</button>
