--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                         <br>
                         <span class="text-primary" >自主學習成果</span>
                     </h1>
-                    <h4 style="font-size: 70px;">
+                    <!-- <h4 style="font-size: 70px;">
                         MADE BY 高二信王威喆
-                    </h4>
+                    </h4> -->
 
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
